got featured image from JPL site

--- a/Mission_to_Mars/mission_to_mars.ipynb
+++ b/Mission_to_Mars/mission_to_mars.ipynb
@@ -11,6 +11,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# NASA Mars News"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 59,
    "metadata": {},
@@ -51,6 +58,74 @@
     "    print(news_p)\n",
     "except AttributeError:\n",
     "    print(\"not found\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# JPL Mars Space Images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initiate headless driver for deployment\n",
+    "browser = Browser(\"chrome\", executable_path=\"chromedriver\", headless=True)\n",
+    "# Scrape Mars News\n",
+    "# Visit the JPL images site\n",
+    "url = 'https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars'\n",
+    "browser.visit(url)\n",
+    "\n",
+    "# Add try/except for error handling\n",
+    "try:\n",
+    "    # Open the full image link\n",
+    "    browser.click_link_by_partial_text('FULL IMAGE')\n",
+    "except:\n",
+    "    print(\"FULL IMAGE link not found\")\n",
+    "\n",
+    "# Optional delay for loading the page\n",
+    "browser.is_element_present_by_css(\".fancybox-image\", wait_time=1)\n",
+    "# Convert the browser html to a soup object and then quit the browser\n",
+    "html = browser.html\n",
+    "image_soup = bs(html, 'html.parser')\n",
+    "\n",
+    "try:\n",
+    "    # grab image src and add onto site domain\n",
+    "    image_link = image_soup.find(class_=\"fancybox-image\")['src']\n",
+    "    featured_image_url = 'https://www.jpl.nasa.gov' + image_link\n",
+    "except:\n",
+    "    print(\"image not found\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.jpl.nasa.gov/spaceimages/images/mediumsize/PIA18614_ip.jpg'"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "featured_image_url"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mars Facts"
    ]
   },
   {
