--- a/Mission_to_Mars/mission_to_mars.ipynb
+++ b/Mission_to_Mars/mission_to_mars.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
     "from splinter import Browser\n",
-    "from bs4 import BeautifulSoup as bs"
+    "from bs4 import BeautifulSoup as bs\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -103,22 +104,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'https://www.jpl.nasa.gov/spaceimages/images/mediumsize/PIA18614_ip.jpg'"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.jpl.nasa.gov/spaceimages/images/mediumsize/PIA18614_ip.jpg\n"
+     ]
     }
    ],
    "source": [
-    "featured_image_url"
+    "print(featured_image_url)"
    ]
   },
   {
@@ -126,6 +124,105 @@
    "metadata": {},
    "source": [
     "# Mars Facts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<table border=\"1\" class=\"dataframe\">  <tbody>    <tr>      <td>Equatorial Diameter:</td>      <td>6,792 km</td>    </tr>    <tr>      <td>Polar Diameter:</td>      <td>6,752 km</td>    </tr>    <tr>      <td>Mass:</td>      <td>6.39 × 10^23 kg (0.11 Earths)</td>    </tr>    <tr>      <td>Moons:</td>      <td>2 (Phobos &amp; Deimos)</td>    </tr>    <tr>      <td>Orbit Distance:</td>      <td>227,943,824 km (1.38 AU)</td>    </tr>    <tr>      <td>Orbit Period:</td>      <td>687 days (1.9 years)</td>    </tr>    <tr>      <td>Surface Temperature:</td>      <td>-87 to -5 °C</td>    </tr>    <tr>      <td>First Record:</td>      <td>2nd millennium BC</td>    </tr>    <tr>      <td>Recorded By:</td>      <td>Egyptian astronomers</td>    </tr>  </tbody></table>'"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# scrape all tables from url\n",
+    "url = 'https://space-facts.com/mars/'\n",
+    "tables = pd.read_html(url)\n",
+    "# grab the first table, the one we are interesed in using\n",
+    "tabel = tables[0]\n",
+    "# save the table as a file\n",
+    "tabel.to_html('table.html',header=False,index=False)\n",
+    "# store the table as a string\n",
+    "tabel_html = tabel.to_html(header=False,index=False).replace('\\n','')\n",
+    "tabel_html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mars Hemispheres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initiate headless driver for deployment\n",
+    "browser = Browser(\"chrome\", executable_path=\"chromedriver\", headless=True)\n",
+    "# Scrape Mars News\n",
+    "# Visit the astrogeology site\n",
+    "domain = 'https://astrogeology.usgs.gov'\n",
+    "url = 'https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars'\n",
+    "browser.visit(url)\n",
+    "\n",
+    "# Optional delay for loading the page\n",
+    "browser.is_element_present_by_css(\".description .pubDate\", wait_time=1)\n",
+    "# Convert the browser html to a soup object and then quit the browser\n",
+    "html = browser.html\n",
+    "astro_soup = bs(html, 'html.parser')\n",
+    "# get links to all 4 hemispheres\n",
+    "hemi_links_slides = astro_soup.find_all('div',class_='description')\n",
+    "# get url links to all 4 hemispheres' pages\n",
+    "hemi_links = []\n",
+    "for slide in hemi_links_slides:\n",
+    "    hemi_links.append(domain + slide.find('a')['href'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/search/map/Mars/Viking/cerberus_enhanced'"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hemi_d = {1:{},2:{},3:{},4:{}}\n",
+    "for x in range(0,4):\n",
+    "    hemi_d[x+1] = hemi_links[x].find('a')['href']"
    ]
   },
   {
