finished Mars Hemispheres section, and thus Step 1

--- a/Mission_to_Mars/mission_to_mars.ipynb
+++ b/Mission_to_Mars/mission_to_mars.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,43 +186,51 @@
     "# get url links to all 4 hemispheres' pages\n",
     "hemi_links = []\n",
     "for slide in hemi_links_slides:\n",
-    "    hemi_links.append(domain + slide.find('a')['href'])"
+    "    hemi_links.append(domain + slide.find('a')['href'])\n",
+    "\n",
+    "hemi_image_urls_titles = [] # for storing image info dictionaries\n",
+    "# loop through each hemisphere url\n",
+    "for url in hemi_links:\n",
+    "    # connect to url\n",
+    "    browser.visit(url)\n",
+    "\n",
+    "    # Optional delay for loading the page\n",
+    "    browser.is_element_present_by_css(\".wide-image\", wait_time=1)\n",
+    "    # Convert the browser html to a soup object and then quit the browser\n",
+    "    html = browser.html\n",
+    "    hemi_soup = bs(html, 'html.parser')\n",
+    "    \n",
+    "    # store title and link into list as a dicitonary\n",
+    "    link = domain + hemi_soup.find(class_='wide-image')['src']\n",
+    "    title = hemi_soup.find(class_='title').text\n",
+    "    hemi_image_urls_titles.append({\"title\":title,\"img_url\":link})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/search/map/Mars/Viking/cerberus_enhanced'"
+       "[{'title': 'Cerberus Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astrogeology.usgs.gov/cache/images/f5e372a36edfa389625da6d0cc25d905_cerberus_enhanced.tif_full.jpg'},\n",
+       " {'title': 'Schiaparelli Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astrogeology.usgs.gov/cache/images/3778f7b43bbbc89d6e3cfabb3613ba93_schiaparelli_enhanced.tif_full.jpg'},\n",
+       " {'title': 'Syrtis Major Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astrogeology.usgs.gov/cache/images/555e6403a6ddd7ba16ddb0e471cadcf7_syrtis_major_enhanced.tif_full.jpg'},\n",
+       " {'title': 'Valles Marineris Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astrogeology.usgs.gov/cache/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg'}]"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hemi_d = {1:{},2:{},3:{},4:{}}\n",
-    "for x in range(0,4):\n",
-    "    hemi_d[x+1] = hemi_links[x].find('a')['href']"
+    "hemi_image_urls_titles"
    ]
   },
   {
